# PittGPT

./: main.py  pyproject.toml
src/: functions.py  main.py  pitt.py  utils.py
